<resources>
    <string name="app_name">Tasky</string>
    <string name="title">Title</string>
    <string name="open_menu">Open menu</string>
    <string name="more_options">More options</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="task_title">Task title</string>
    <string name="the_task">The task</string>
    <string name="task_is_completed">Task is completed</string>
    <string name="go_back">go back</string>
    <string name="delete">delete</string>
    <string name="move_to_important">move to important</string>
    <string name="task_deleted">Task\'s deleted</string>
    <string name="undo">Undo</string>
    <string name="set_date">Set date</string>
    <string name="task_is_not_completed">Task is not completed</string>
    <string name="add_to_important">Add to important</string>
    <string name="all_tasks">All tasks</string>
    <string name="important_tasks">Important tasks</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="date_s_not_chosen">Date\'s not chosen</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_importance">Sort by importance</string>
    <string name="add_subtask">Add subtask</string>
    <string name="new_subtask">New subtask</string>
    <string name="save">Save</string>
</resources>